Console input handling fixes, format fixes, tested console commands